orbit/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orbit
  namespace: lagrange
  labels:
    app.kubernetes.io/name: orbit
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: orbit
  ports:
    - name: http
      port: 80
      targetPort: http
